@@ -2,20 +2,24 @@ package com.github.connectionai.agents.core.bdi;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import lombok.extern.slf4j.Slf4j;
+
+@Slf4j
 public abstract class BeliefBase {
 
-    private final List<Belief> beliefs;
+    private final List<Belief> items;
 
-    public BeliefBase(final List<Belief> beliefs) {
+    public BeliefBase(final List<Belief> items) {
     	
-        this.beliefs = beliefs;
+        this.items = items;
     }
 
     public Belief getBelief(final String name) {
     	
-        return beliefs
+    	log.info("m=getBelief, name={}", name);
+    	
+        return items
         		.stream()
         		.filter(belief->belief.getName().equalsIgnoreCase(name))
         		.findFirst()
@@ -24,27 +28,35 @@ public abstract class BeliefBase {
 
     public void updateBelief(final Belief belief) {
     	
-    	final int indexOf = beliefs.indexOf(belief);
+    	log.info("m=updateBelief, belief={}", belief);
+    	
+    	final int indexOf = items.indexOf(belief);
     	if(indexOf > 0) {
-    		beliefs.set(indexOf, belief);
+    		items.set(indexOf, belief);
     	}
     }
 
     public Collection<Belief> getAllBeliefs() {
     	
-        return beliefs;
+    	log.info("m=getAllBeliefs");
+    	
+        return items;
     }
 
 	public void addHistory(final Belief belief) {
 		
-		beliefs.add(belief);
+		log.info("m=addHistory, belief={}", belief);
+		
+		items.add(belief);
 	}
 	
 	public List<String> handles(){
 		
-		return beliefs
+		log.info("m=addHistory, handles={}");
+		
+		return items
 				.stream()
-				.map(belief->belief.handle())
-				.collect(Collectors.toList());
+				.map(Belief::handle)
+				.toList();
 	}
 }
